# MECA-DRONE

./: .gitignore  README.md  START-DESKTOP-APP.bat  main.py  ras.pi  requirements.txt
ai/: README.md  integration.py
backend/: README.md
backend/src-tauri/: Cargo.toml  tauri.conf.json
backend/src-tauri/src/: main.rs
frontend/: main.py
